--- a/package.json
+++ b/package.json
@@ -13,116 +13,118 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
-    "@mantine/carousel": "^8.3.8",
-    "@mantine/charts": "^8.3.8",
-    "@mantine/core": "^8.3.8",
-    "@mantine/dates": "^8.3.8",
-    "@mantine/dropzone": "^8.3.8",
-    "@mantine/form": "^8.3.8",
-    "@mantine/hooks": "^8.3.8",
-    "@mantine/modals": "^8.3.8",
-    "@mantine/notifications": "^8.3.8",
-    "@mantine/nprogress": "^8.3.8",
-    "@mantine/tiptap": "^8.3.8",
-    "@react-pdf/renderer": "^4.3.1",
-    "@rive-app/canvas": "^2.32.1",
-    "@rive-app/canvas-lite": "^2.32.1",
-    "@rive-app/react-canvas": "^4.24.0",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.81.1",
-    "@tiptap/core": "^3.10.7",
-    "@tiptap/extension-blockquote": "^3.10.7",
-    "@tiptap/extension-hard-break": "^3.10.7",
-    "@tiptap/extension-image": "^3.10.7",
-    "@tiptap/extension-link": "^3.10.7",
-    "@tiptap/extension-placeholder": "^3.10.7",
-    "@tiptap/extension-text-style": "^3.10.7",
-    "@tiptap/extension-underline": "^3.10.7",
-    "@tiptap/html": "^3.10.7",
-    "@tiptap/pm": "^3.10.7",
-    "@tiptap/react": "^3.10.7",
-    "@tiptap/starter-kit": "^3.10.7",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@mantine/carousel": "^8.3.12",
+    "@mantine/charts": "^8.3.12",
+    "@mantine/core": "^8.3.12",
+    "@mantine/dates": "^8.3.12",
+    "@mantine/dropzone": "^8.3.12",
+    "@mantine/form": "^8.3.12",
+    "@mantine/hooks": "^8.3.12",
+    "@mantine/modals": "^8.3.12",
+    "@mantine/notifications": "^8.3.12",
+    "@mantine/nprogress": "^8.3.12",
+    "@mantine/tiptap": "^8.3.12",
+    "@react-pdf/renderer": "^4.3.2",
+    "@rive-app/canvas": "^2.33.3",
+    "@rive-app/canvas-lite": "^2.33.3",
+    "@rive-app/react-canvas": "^4.25.3",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-blockquote": "^3.15.3",
+    "@tiptap/extension-hard-break": "^3.15.3",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/html": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.13.2",
     "base64-arraybuffer": "^1.0.2",
-    "bufferutil": "^4.0.9",
+    "bufferutil": "^4.1.0",
     "calendar-link": "^2.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.19",
     "dayjs-plugin-utc": "^0.1.2",
-    "dompurify": "^3.3.0",
+    "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
-    "glob": "^11.0.3",
+    "glob": "^13.0.0",
     "leaflet": "^1.9.4",
     "leaflet-editable": "^1.3.2",
     "leaflet-gpx": "^2.2.0",
     "leaflet-routing-machine": "^3.2.12",
-    "libphonenumber-js": "^1.12.26",
-    "mantine-datatable": "^8.3.7",
-    "maplibre-gl": "^5.13.0",
-    "next": "16.0.3",
-    "openai": "^6.9.0",
+    "libphonenumber-js": "^1.12.33",
+    "mantine-datatable": "^8.3.11",
+    "mantine-form-zod-resolver": "^1.3.0",
+    "maplibre-gl": "^5.15.0",
+    "next": "16.1.1",
+    "openai": "^6.16.0",
     "prosemirror-model": "^1.25.4",
     "prosemirror-state": "^1.4.4",
-    "prosemirror-view": "^1.41.3",
-    "puppeteer-core": "^24.30.0",
+    "prosemirror-view": "^1.41.4",
+    "puppeteer-core": "^24.34.0",
     "radar-sdk-js": "^4.5.8",
-    "react": "19.2.0",
+    "react": "19.2.3",
     "react-countup": "^6.5.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.3",
     "react-image-crop": "^11.0.10",
     "react-imask": "^7.6.1",
     "react-leaflet": "^5.0.0",
-    "recharts": "^3.4.1",
-    "resend": "^6.4.2",
-    "rimraf": "^6.1.0",
+    "recharts": "^3.6.0",
+    "resend": "^6.7.0",
+    "rimraf": "^6.1.2",
     "supports-color": "^10.2.2",
     "timezone": "^1.0.23",
-    "ua-parser-js": "^2.0.6",
+    "ua-parser-js": "^2.0.7",
     "unsplash-js": "^7.0.20",
     "utc": "^0.1.0",
-    "utf-8-validate": "^6.0.5"
+    "utf-8-validate": "^6.0.6",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
-    "@next/bundle-analyzer": "^16.0.3",
+    "@next/bundle-analyzer": "^16.1.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/formidable": "^3.4.6",
     "@types/jest": "^30.0.0",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet-routing-machine": "^3.2.9",
-    "@types/lodash": "^4.17.20",
-    "@types/node": "^20",
+    "@types/lodash": "^4.17.23",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-mantine": "^4.0.3",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.1.1",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jest": "^29.1.0",
+    "eslint-plugin-jest": "^29.12.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-testing-library": "^7.13.4",
+    "eslint-plugin-testing-library": "^7.15.4",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.6.2",
-    "stylelint": "^16.25.0",
+    "prettier": "^3.7.4",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard-scss": "^16.0.0",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "^29.4.6",
     "typescript": "^5"
   }
 }
